# railtracks

./: .gitignore  404.html  CNAME  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _delete_later.py  core-licenses-summary.md  core-licenses.md  delete_me.py  ex.py  example.py  exploration.py  google.py  huggingface.py  index.html  langchain_oauth.py  lite_llm.py  mkdocs.yml  mkdocs_hooks.py  owerwatch_mcp.py  payload_log.json  pyproject.toml  requirements-dev.txt  rt_streaming.ipynb  rt_streaming.py  sitemap.xml  streaming.py  test.py  test_issue.py  test_no_print_statements.py  todelete.py
.covailence/: 04c1870f-6ef9-4292-a825-06335ff34966.json  0881b469-4afa-4844-a99c-07ef9be5930e.json  0971c780-2de7-4787-83d2-4231ff6e9a60.json  09a5795f-2102-4a30-8a18-7bdaf7f53a05.json  0abfc3ad-7121-47c2-b241-be5cbb09b26b.json  0e6a7a30-0d0f-411b-b3af-6bb8a3f88d22.json  0eccdaa6-c235-4f06-8d15-42980bcfd029.json  0f1b6ab1-33f3-40ae-9864-5ce320c0983f.json  1079f0a5-f299-4b88-b841-d9f547f2414c.json  1319f6bf-f781-4499-83c8-6804f1b13dd9.json  13623e06-cbec-4888-b85a-7c988bbcd443.json  1378d341-d4a4-47ed-8b80-99175408b9f2.json  150fc52c-01e8-482e-ac05-f95af877fa60.json  15265cf7-10ce-40c3-adf0-570f6a899d06.json  169fd104-947c-4c5a-b539-4bd1ef4a430c.json  17236820-78b4-467b-804f-96ff05ad4f06.json  17cf33d6-47de-46c0-b0bf-35af8247d8a4.json  17d194e7-3f54-4d9e-bc76-ecebcc3c7e65.json  1c5751bf-5feb-4779-ac11-7bd8beb28f15.json  1d78eee2-a369-48cb-b8b8-c1b72a3c90cd.json  1eed71e9-4dc3-4548-9c80-8c3d40f74b71.json  1f12c706-bd18-4070-83e3-97e5f4efafba.json  1f7b6b9c-e4f1-4c65-aaa4-6b1c3b83be22.json  1fc400d1-26ef-43a9-9272-ca70f8322843.json  20595741-bea4-4318-b26e-60c7f4ea0b30.json  21973a28-1495-4111-b6ce-2f2ebb938d9a.json  21d38622-d050-41f5-a264-bef80850f98e.json  2202d1a5-bf1e-4c88-b0b0-7d830af574bc.json  225eee54-d7d4-4c15-bd43-1115cd3c5fcf.json  233f5338-2d68-4f4c-8407-027b0f43ded8.json  267aa068-a48e-49c2-9c1b-62282d5febe9.json  26f5af3f-5b9f-40de-bf7b-cf53ff07b492.json  2a0fcea6-4dc8-4c93-afe2-8e78ae3b9948.json  2ae5e8f1-c20f-412d-b372-fe49b8132669.json  2ca51a80-917f-434f-b920-7fe205db4642.json  2d5a47af-af7c-40fb-b4aa-a73d18102141.json  2f03540e-c3c0-4c79-829e-d317e43c0d24.json  2f85b77d-1a77-4db8-85c2-54d83560635c.json  305de8c4-6644-4895-b17f-b5e0df683e47.json  30e4a575-2424-4904-8b0d-217a398b064e.json  (+137 more)
.cursor/rules/: grammar-agent.mdc
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yaml  bug_report.md  config.yml  documentation.md  epic.yaml  feature.yaml  feature_request.md  feature_request.yaml  general.yaml  performance.md  question.md  question.yaml  security.md  task.yaml  visualizer.yaml
.github/workflows/: build.yaml  e2e.yaml  pr_tests.yaml  push_main.yaml  release.yaml  release_docs.yaml  release_package.yaml
LORAG/: BRIGHT_INSTRUCTIONS.md  apply_refactoring.py  batch.md  requirements.txt  sample.py  sample_rag_only.py  setup.py  simple_test.py  test_lorag.py  web_demo.py
LORAG/eval/: README.md  evaluate_bright.py  evaluate_bright_simple.py  prepare_bright.py  simple_bright_test.py  summary.md  test_bright.py
LORAG/lorag/: __init__.py  batch.py  core.py  database.py  document_search_engine.py  embedding_manager.py  logger.py  search_methods.py  text_processing.py  utils.py
LORAG/other/: DESIGN.md  RAG_SYS.md  exe.ipynb
LORAG/tests/: run_tests.py  test_batch.py  test_batch_chunking.py  test_core.py  test_database.py  test_embedding.py  test_lorag.py
advanced_usage/config/: index.html
advanced_usage/context/: index.html
api_reference/: index.html  railtracks.html  search.js
css/: extra.css
demo/: 1_voice_to_notion.ipynb  2_image_to_notion.ipynb  3_notion_travel_planner.ipynb  hello_world.ipynb  image_to_notion.py  image_voice_notion.py  notion_travel_planner.ipynb  telus_demo.ipynb  travel_planner.ipynb
docs/: api_reference.md  index.md  outline.md
dotnet/: DEPENDENCY_MAP.md  Directory.Build.props  Railtracks.slnx
examples/: mcp_example.py  rag_agent.ipynb  travel_planner.ipynb
middleware-examples/: tool_call_streaming_rate_limits.py
project/: agents.py  custom_chat_ui.py  docs_agent.py  docs_mcp_server.py  embed_docs.py  extract_snippets.py  main.py  memory_agent.py  rag_memory.py
railtracks-cli/: README.md  pyproject.toml  railtracks.py
railtracks-cli/src/railtracks/: __init__.py
samples/: index.html
scripts/: _logging.py  check_licenses.sh  docs_validation.sh  generate_api_docs.sh  mkdocs_hooks.py  providers.py  publish_to_azure_artifacts.py  todos.py  verify_api_docs.sh
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
(+803 files in other folders)
