[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "railtracks-monorepo"
version = "0.1.0"
description = "RailTracks mono-repo development environment"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Logan Underwood", email = "logan@railtown.ai" },
    { name = "Levi Varsanyi", email = "levi@railtown.ai" },
    { name = "Jaime Bueza", email = "jaime@railtown.ai" },
    { name = "Amir Refaee", email = "amir@railtown.ai" },
    { name = "Aryan Ballani", email = "aryan@railtown.ai" },
    { name = "Tristan Brown", email = "tristan@railtown.ai" }
]
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = []
private = true

[project.urls]
repository = "https://github.com/RailtownAI/railtracks"
ui-repository = "https://github.com/RailtownAI/railtracks-visualizer"
railtown = "https://railtown.ai"

[dependency-groups]
lint = [
    "ruff>=0.11.13"
]
dev = [
    "railtracks-monorepo:lint",
    "railtracks-monorepo:docs",
    "railtracks-monorepo:test",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.2.1",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
]

[tool.ruff]
target-version = "py310"
line-length = 88

format.indent-style = "space"
format.docstring-code-format = true

lint.select = [
    "E",
    "I",
    "W",
    "F",
    "C",
    "N",
]

lint.ignore = [
    "E501", "W191", "E114", "E117",
    "D206", "D300",
    "Q000", "Q002", "Q003",
    "COM812", "COM819",
    "W291", "W292", "W293"
]

fix = true
lint.fixable = ["F401", "F841", "I001"]

exclude = [".git", "examples", "docs", ".venv", ".conda", "tests"]

lint.mccabe.max-complexity = 10


