[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "railtracks"
version = "0.1.0"
description = "RailTracks - A framework for building AI agents and workflows"
license = {text = "Apache-2.0"}
authors = [
    {name = "Railtown AI", email = "info@railtown.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py310"
line-length = 88

format.indent-style = "space"
format.docstring-code-format = true

lint.select = [
    "E",
    "I",
    "W",
    "F",
    "C",
    "N",
]

lint.ignore = [
    "E501", "W191", "E114", "E117",
    "D206", "D300",
    "Q000", "Q002", "Q003",
    "COM812", "COM819",
    "W291", "W292", "W293"
]

fix = true
lint.fixable = ["F401", "F841", "I001"]

exclude = [".git", "examples", "docs", ".venv", ".conda", "tests"]

lint.mccabe.max-complexity = 10


[tool.pytest.ini_options]
asyncio_mode = "auto"
